# OpenDaqGlue

./: .gitignore  CMakeLists.txt  ColoredPrinter.h  ErrorCodes.h  README.md  driver.c  lib.cpp  lib.h  test_polygon.cpp
BoilerplateImpl/: OpenDaqObject.cpp  OpenDaqObject.h  app_channel.cpp  app_channel.h  app_descriptor.cpp  app_descriptor.h  app_device.cpp  app_device.h  app_function_block.cpp  app_function_block.h  app_input_port.cpp  app_input_port.h  app_property_object.cpp  app_property_object.h  app_signal.cpp  app_signal.h  app_sync.cpp  app_sync.h  stdout_redirect.cpp  stdout_redirect.h  util.h
LabView/: DllCall.vi  LabViewTest.lvlps  LabViewTest.lvproj  LabViewTest.vi
